--- a/apps/web-app/src/app/features/confirm-dialog/confirm-dialog.html
+++ b/apps/web-app/src/app/features/confirm-dialog/confirm-dialog.html
@@ -1,6 +1,14 @@
-<h2 mat-dialog-title>Are you sure?</h2>
-
+<h2 mat-dialog-title>{{data?.type == 'alert' ? data.alertTitle : 'Are you sure?'}}</h2>
+@if (data?.alertDescription) {
+<mat-dialog-content>
+  {{data.alertDescription}}
+</mat-dialog-content>
+}
 <mat-dialog-actions>
+  @if (data?.type == 'alert') {
+  <button mat-flat-button [mat-dialog-close]="true">OK</button>
+  } @else {
   <button matButton [mat-dialog-close]="false">No</button>
   <button mat-flat-button [mat-dialog-close]="true">Yes</button>
+  }
 </mat-dialog-actions>
